# duration-string

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  readme.md
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: build.yaml  build.yml
src/: lib.rs
