[package]
name = "duration-string"
description = "string to duration and visa-versa lib. format is [0-9]+(ms|[smhdwy]) such as 100ms, 1s, 2h, 1y"
documentation = "https://docs.rs/duration-string"
readme = "readme.md"
repository = "https://github.com/Ronniskansing/duration-string"
license-file = "LICENSE"
keywords = ["duration"]
categories = ["date-and-time"]
exclude = ["coverage/**/*"]
version = "0.0.4"
authors = ["Ronni Skansing <rskansing@gmail.com>"]
edition = "2018"

[features]
serde_support = ["serde"]

[dependencies]
serde = { version = "1.0.105", optional = true }

# testing and doc'ing
# cargo instlal cargo-tarpaulin
# cargo install cargo-watch

# cargo watch -x "tarpaulin --run-types Tests --out Lcov --output-dir coverage"
# cargo watch -x "tarpaulin --run-types Tests --out Lcov --output-dir coverage; cargo test --doc; cargo doc" # VSCODE - Coverage Gutters

# update readme
# cargo install cargo-readme
# cargo readme > readme.md