[package]
name = "duration-string"
description = "String to duration and vice-versa lib. Format is [0-9]+(ns|us|ms|[smhdwy]) such as 100ms, 1s, 2h, 1y"
documentation = "https://docs.rs/duration-string"
readme = "README.md"
repository = "https://github.com/Ronniskansing/duration-string"
license-file = "LICENSE"
keywords = ["duration"]
categories = ["date-and-time"]
exclude = ["coverage/**/*"]
version = "0.4.0"
authors = [
    "Ronni Skansing <rskansing@gmail.com>",
    "Martin Davy <mjdavy@hotmail.com>",
    "Philip Sequeira <qmega@sksm.net>",
    "Kiran Ostrolenk <kostrolenk@gmail.com>",
    "Carlo Corradini <carlo.corradini98@gmail.com>",
]
edition = "2018"

[features]
# default = ["serde"]

[dependencies]
serde = { version = "1.0.105", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = { version = "1.0.49" }

[profile.test]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }


# testing and doc'ing
# cargo install cargo-tarpaulin
# cargo install cargo-watch

# cargo watch -x "tarpaulin --run-types Tests --out Lcov --output-dir coverage"
# cargo watch -x "tarpaulin --run-types Tests --out Lcov --output-dir coverage; cargo test --doc; cargo doc" # VSCODE - Coverage Gutters

# update readme
# cargo install cargo-readme
# cargo readme > readme.md
